Modernization and Java 21 Migration
- Integrated native FileDialog across all file-related operations.
- Replaced DatePicker.jar with JCalendar (JDateChooser).
- Resolved Java 21 compatibility issues (deprecated constructors, raw types).
- Added command-line build and run scripts (build.sh, run.sh).
- Upgraded jcalendar to 1.4 and removed obsolete libraries.
- Added CHANGES.md and AGENTS.md for documentation and AI collaboration rules.
- Linked CHANGES.md from README.md.